# wt-cli-rust

./: .gitignore  Cargo.toml  justfile
.rust-mentor/: plan.json
lessons/: 01-types-structs-enums.md  02-process-spawning.md  03-config-file-io-serde.md
src/: main.rs  types.rs
