[package]
name = "wt-cli"
version = "0.1.0"
edition = "2021"
description = "Git worktree manager — Rust rewrite of wt-cli"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
